# overwatch-mvp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.in  requirements.txt  update_deps
.circleci/: config.yml
analysis/: cli.py  errors.py
analysis/configuration/: configs.py  loader.py  processing_dates.py
analysis/data/: metric.py
analysis/data/templates/: active_user_aggregates_by_dims.sql  active_user_aggregates_device_by_dims.sql  active_user_aggregates_device_no_dim.sql  active_user_aggregates_no_dim.sql  www_site_metrics_summary_v1_by_dims.sql  www_site_metrics_summary_v1_no_dim.sql
analysis/deprecated/: detector.py  geolocation.py
analysis/detection/: detector.py  profile.py
analysis/detection/explorer/: all_dimensions.py  dimension_evaluator.py  geolocation.py  multiple_dimensions.py  one_dimension.py  single_dimension.py  top_level.py
analysis/detection/results/: bigquery_client.py  store.py
analysis/logging/: __init__.py
analysis/notification/: gcs.py  slack.py
analysis/reports/: generator.py
analysis/reports/templates/: 4.3.1.bootstrap.min.css  report.html.j2  report_version2.html.j2  report_version3.html.j2  test.html
config_files/: desktop-dau.toml  desktop-mau.toml  desktop-new-profiles.toml  fenix-dau.toml  fenix-new-profiles.toml  ios-dau.toml  ios-new-profiles.toml  site-metric-downloads.toml
config_files_wip/: site-metric-downloads.toml
dags/: overwatch.py
tests/: conftest.py  test_all_dimensions.py  test_cli.py  test_loader.py  test_multiple_dimensions.py  test_one_dimension.py  test_processing_dates.py  test_store.py  test_top_level.py
tests/fixtures/config_files/: sample-config-all-fields.toml
