[project]
name="automated-analysis-poc"
version = "0.1.0"
description=""
authors = [
    {name = "Glenda Leonard", email="gleonard@mozilla.com"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'pandas>=1.5.0',
    'click>=8.1.3',
    'google-cloud-bigquery>=3.3.2',
    'db-dtypes>=1.0.4',
    'jinja2>=3.1.2',
    'slack_sdk>=3.18.3',
    'pdfkit>=1.0.0',
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--import-mode=importlib",
    "-ra -q",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src"]

[project.optional-dependencies]
testing = [
  "pytest>=7.1.3",
  "pytest-cov[all]", 
  "black>=22.8.0",
  "isort>=5.10.1",
  "flake8>=5.0.4",
]

[project.urls]
repository = "https://github.com/mozilla/overwatch"

[project.scripts]
overwatch = "analysis.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3